--- a/config/install/language/hr/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/hr/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Prioriteti Komisije'
-political_url: 'https://ec.europa.eu/commission/index_hr'
+political_href: 'https://ec.europa.eu/commission/index_hr'
 info_label: 'Politike, informacije i službe'
-info_url: 'https://ec.europa.eu/info/index_hr'
+info_href: 'https://ec.europa.eu/info/index_hr'
