--- a/config/install/language/mt/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/mt/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Il-Kummissjoni u l-prijoritajiet tagħha'
-political_url: 'https://ec.europa.eu/commission/index_mt'
+political_href: 'https://ec.europa.eu/commission/index_mt'
 info_label: 'Politiki, informazzjoni u servizzi'
-info_url: 'https://ec.europa.eu/info/index_mt'
+info_href: 'https://ec.europa.eu/info/index_mt'
