--- a/config/install/language/nl/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/nl/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Commissarissen en prioriteiten'
-political_url: 'https://ec.europa.eu/commission/index_nl'
+political_href: 'https://ec.europa.eu/commission/index_nl'
 info_label: 'Beleid, informatie en diensten'
-info_url: 'https://ec.europa.eu/info/index_nl'
+info_href: 'https://ec.europa.eu/info/index_nl'
