--- a/config/install/language/bg/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/bg/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Комисията и нейните приоритети'
-political_url: 'https://ec.europa.eu/commission/index_bg'
+political_href: 'https://ec.europa.eu/commission/index_bg'
 info_label: 'Политики, информация и услуги'
-info_url: 'https://ec.europa.eu/info/index_bg'
+info_href: 'https://ec.europa.eu/info/index_bg'
