--- a/config/install/language/cs/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/cs/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Komise a její priority'
-political_url: 'https://ec.europa.eu/commission/index_cs'
+political_href: 'https://ec.europa.eu/commission/index_cs'
 info_label: 'Oblasti politiky, informace a služby'
-info_url: 'https://ec.europa.eu/info/index_cs'
+info_href: 'https://ec.europa.eu/info/index_cs'
