--- a/config/install/language/el/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/el/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Η Ευρωπαϊκή Επιτροπή και οι προτεραιότητές της'
-political_url: 'https://ec.europa.eu/commission/index_el'
+political_href: 'https://ec.europa.eu/commission/index_el'
 info_label: 'Πολιτικές, πληροφορίες και υπηρεσίες'
-info_url: 'https://ec.europa.eu/info/index_el'
+info_href: 'https://ec.europa.eu/info/index_el'
