--- a/config/install/language/et/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/et/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Komisjon ja tema prioriteedid'
-political_url: 'https://ec.europa.eu/commission/index_et'
+political_href: 'https://ec.europa.eu/commission/index_et'
 info_label: 'Poliitikavaldkonnad, teave ja teenused'
-info_url: 'https://ec.europa.eu/info/index_et'
+info_href: 'https://ec.europa.eu/info/index_et'
