--- a/config/install/language/fi/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/fi/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Komissio ja sen toiminnan painopisteet'
-political_url: 'https://ec.europa.eu/commission/index_fi'
+political_href: 'https://ec.europa.eu/commission/index_fi'
 info_label: 'Politiikan alat, palvelut, tietolähteet'
-info_url: 'https://ec.europa.eu/info/index_fi'
+info_href: 'https://ec.europa.eu/info/index_fi'
