--- a/config/install/language/ga/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/ga/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'An Coimisiún agus a thosaíochtaí'
-political_url: 'https://ec.europa.eu/commission/index_ga'
+political_href: 'https://ec.europa.eu/commission/index_ga'
 info_label: 'Beartais, eolas agus seirbhísí'
-info_url: 'https://ec.europa.eu/info/index_ga'
+info_href: 'https://ec.europa.eu/info/index_ga'
