--- a/config/install/language/lt/oe_corporate_blocks.data.site_switcher.yml
+++ b/config/install/language/lt/oe_corporate_blocks.data.site_switcher.yml
@@ -1,4 +1,4 @@
 political_label: 'Komisija ir jos prioritetai'
-political_url: 'https://ec.europa.eu/commission/index_lt'
+political_href: 'https://ec.europa.eu/commission/index_lt'
 info_label: 'Politika, informacija ir paslaugos'
-info_url: 'https://ec.europa.eu/info/index_lt'
+info_href: 'https://ec.europa.eu/info/index_lt'
