OPENEUROPA-1792: Translate string 'Resources for partners'.

--- a/config/install/language/bg/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/bg/oe_corporate_blocks.data.footer.yml
@@ -34,7 +34,7 @@ bottom_links:
     label: 'За новото присъствие на Комисията в интернет'
   -
     href: 'http://ec.europa.eu/info/resources-partners_bg'
-    label: 'Resources for partners'
+    label: 'Ресурси за партньори'
   -
     href: 'https://ec.europa.eu/info/language-policy_bg'
     label: 'Езикова политика'
