--- a/config/install/language/cs/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/cs/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Jazyková politika'
   -
     href: 'http://ec.europa.eu/info/resources-partners_cs'
-    label: 'Resources for partners'
+    label: 'Zdroje a pokyny pro naše partnery'
   -
     href: 'https://ec.europa.eu/info/cookies_cs'
     label: Cookies
