--- a/config/install/language/de/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/de/oe_corporate_blocks.data.footer.yml
@@ -34,7 +34,7 @@ bottom_links:
     label: 'Über den neuen Internetauftritt der Kommission'
   -
     href: 'http://ec.europa.eu/info/resources-partners_de'
-    label: 'Resources for partners'
+    label: 'Ressourcen für Partner'
   -
     href: 'https://ec.europa.eu/info/language-policy_de'
     label: Sprachenpolitik
