--- a/config/install/language/et/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/et/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: EKeelepoliitika
   -
     href: 'http://ec.europa.eu/info/resources-partners_et'
-    label: 'Resources for partners'
+    label: 'Materjalid partneritele'
   -
     href: 'https://ec.europa.eu/info/cookies_et'
     label: Küpsised
