--- a/config/install/language/fi/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/fi/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: Kielipolitiikka
   -
     href: 'http://ec.europa.eu/info/resources-partners_fi'
-    label: 'Resources for partners'
+    label: 'Apuvälineitä yhteistyökumppaneille'
   -
     href: 'https://ec.europa.eu/info/cookies_fi'
     label: Evästeet
