--- a/config/install/language/fr/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/fr/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Politique linguistique'
   -
     href: 'http://ec.europa.eu/info/resources-partners_fr'
-    label: 'Resources for partners'
+    label: 'Ressources pour les partenaires'
   -
     href: 'https://ec.europa.eu/info/cookies_fr'
     label: Cookies
