--- a/config/install/language/it/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/it/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Politica linguistica'
   -
     href: 'http://ec.europa.eu/info/resources-partners_it'
-    label: 'Resources for partners'
+    label: 'Risorse per i partner'
   -
     href: 'https://ec.europa.eu/info/cookies_it'
     label: Cookies
