--- a/config/install/language/lv/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/lv/oe_corporate_blocks.data.footer.yml
@@ -34,7 +34,7 @@ bottom_links:
     label: 'Par Komisijas jauno tīmekļa vietni'
   -
     href: 'http://ec.europa.eu/info/resources-partners_lv'
-    label: 'Resources for partners'
+    label: 'Resursi partneriem'
   -
     href: 'https://ec.europa.eu/info/language-policy_lv'
     label: 'Valodu politika'
