--- a/config/install/language/mt/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/mt/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Il-politika tal-lingwi'
   -
     href: 'http://ec.europa.eu/info/resources-partners_mt'
-    label: 'Resources for partners'
+    label: 'Riżorsi għas-sħab'
   -
     href: 'https://ec.europa.eu/info/cookies_mt'
     label: Cookies
