--- a/config/install/language/pl/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/pl/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Polityka językowa'
   -
     href: 'http://ec.europa.eu/info/resources-partners_pl'
-    label: 'Resources for partners'
+    label: 'Materiały dla partnerów'
   -
     href: 'https://ec.europa.eu/info/cookies_pl'
     label: 'Pliki cookie'
