--- a/config/install/language/ro/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/ro/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Politica lingvistică'
   -
     href: 'http://ec.europa.eu/info/resources-partners_ro'
-    label: 'Resources for partners'
+    label: 'Resurse pentru parteneri'
   -
     href: 'https://ec.europa.eu/info/cookies_ro'
     label: Cookie-urile
