--- a/config/install/language/sl/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/sl/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Jezikovna politika'
   -
     href: 'http://ec.europa.eu/info/resources-partners_sl'
-    label: 'Resources for partners'
+    label: 'Viri za partnerje'
   -
     href: 'https://ec.europa.eu/info/cookies_sl'
     label: Piškotki
