--- a/config/install/language/da/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/da/oe_corporate_blocks.data.footer.yml
@@ -34,7 +34,7 @@ bottom_links:
     label: 'Om Kommissionens nye website'
   -
     href: 'http://ec.europa.eu/info/resources-partners_da'
-    label: 'Resources for partners'
+    label: 'Ressourcer for partnere'
   -
     href: 'https://ec.europa.eu/info/language-policy_da'
     label: Sprogpolitik
