--- a/config/install/language/el/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/el/oe_corporate_blocks.data.footer.yml
@@ -34,7 +34,7 @@ bottom_links:
     label: 'About the Commission''s new web presence'
   -
     href: 'http://ec.europa.eu/info/resources-partners_el'
-    label: 'Resources for partners'
+    label: 'Πόροι για εταίρους'
   -
     href: 'https://ec.europa.eu/info/language-policy_el'
     label: 'Γλωσσική πολιτική'
