--- a/config/install/language/es/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/es/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Política lingüística'
   -
     href: 'http://ec.europa.eu/info/resources-partners_es'
-    label: 'Resources for partners'
+    label: 'Recursos disponibles'
   -
     href: 'https://ec.europa.eu/info/cookies_es'
     label: Cookies
