--- a/config/install/language/ga/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/ga/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Beartas teanga'
   -
     href: 'http://ec.europa.eu/info/resources-partners_ga'
-    label: 'Resources for partners'
+    label: 'Acmhainní le haghaidh comhpháirtithe'
   -
     href: 'https://ec.europa.eu/info/cookies_ga'
     label: Fianáin
