--- a/config/install/language/hr/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/hr/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Jezična politika'
   -
     href: 'http://ec.europa.eu/info/resources-partners_hr'
-    label: 'Resources for partners'
+    label: 'Resursi za partnere'
   -
     href: 'https://ec.europa.eu/info/cookies_hr'
     label: Kolačići
