--- a/config/install/language/hu/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/hu/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: Nyelvpolitika
   -
     href: 'http://ec.europa.eu/info/resources-partners_hu'
-    label: 'Resources for partners'
+    label: 'Erőforrások, segédeszközök'
   -
     href: 'https://ec.europa.eu/info/cookies_hu'
     label: Cookie-k
