--- a/config/install/language/lt/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/lt/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Kalbų politika'
   -
     href: 'http://ec.europa.eu/info/resources-partners_lt'
-    label: 'Resources for partners'
+    label: 'Ištekliai partneriams'
   -
     href: 'https://ec.europa.eu/info/cookies_lt'
     label: Slapukai
