--- a/config/install/language/nl/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/nl/oe_corporate_blocks.data.footer.yml
@@ -34,7 +34,7 @@ bottom_links:
     label: 'Over de nieuwe website van de Europese Commissie'
   -
     href: 'http://ec.europa.eu/info/resources-partners_nl'
-    label: 'Resources for partners'
+    label: 'Bronmateriaal voor partners'
   -
     href: 'https://ec.europa.eu/info/language-policy_nl'
     label: Talenbeleid
