--- a/config/install/language/pt-pt/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/pt-pt/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Política em matéria de línguas'
   -
     href: 'http://ec.europa.eu/info/resources-partners_pt'
-    label: 'Resources for partners'
+    label: 'Recursos disponíveis'
   -
     href: 'https://ec.europa.eu/info/cookies_pt'
     label: 'Cookies testemunhos de conexãob'
