--- a/config/install/language/sv/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/sv/oe_corporate_blocks.data.footer.yml
@@ -34,7 +34,7 @@ bottom_links:
     label: 'Om kommissionens nya webbplats'
   -
     href: 'http://ec.europa.eu/info/resources-partners_sv'
-    label: 'Resources for partners'
+    label: 'Resurser för partner'
   -
     href: 'https://ec.europa.eu/info/language-policy_sv'
     label: Språkpolicy
