--- a/config/install/language/sk/oe_corporate_blocks.data.footer.yml
+++ b/config/install/language/sk/oe_corporate_blocks.data.footer.yml
@@ -37,7 +37,7 @@ bottom_links:
     label: 'Jazyková politika'
   -
     href: 'http://ec.europa.eu/info/resources-partners_sk'
-    label: 'Resurse pentru parteneri'
+    label: 'Materiály pre partnerov'
   -
     href: 'https://ec.europa.eu/info/cookies_sk'
     label: 'Súbory cookie'
