--- a/translations/oe_corporate_blocks-bg.po
+++ b/translations/oe_corporate_blocks-bg.po
@@ -39,9 +39,7 @@ msgid "https://ec.europa.eu/info/about-commissions-new-web-presence_en"
 msgstr "https://ec.europa.eu/info/about-commissions-new-web-presence_bg"
 
 msgid "About the Commission's new web presence"
-msgstr ""
-"За новото присъствие на Комисията в "
-"интернет"
+msgstr "За новото присъствие на Комисията в интернет"
 
 msgid "https://ec.europa.eu/info/language-policy_en"
 msgstr "http://ec.europa.eu/info/resources-partners_bg"
