--- a/translations/oe_corporate_blocks-el.po
+++ b/translations/oe_corporate_blocks-el.po
@@ -2,19 +2,11 @@
 msgid "European Commission"
 msgstr "Ευρωπαϊκή Επιτροπή"
 
-msgid "https://ec.europa.eu/commission/index_en"
-msgstr "https://ec.europa.eu/commission/index_el"
-
-msgid "Commission and its priorities"
-msgstr ""
-"Η Ευρωπαϊκή Επιτροπή και οι "
-"προτεραιότητές της"
-
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_el"
 
-msgid "Policies, information and services"
-msgstr "Πολιτικές, πληροφορίες και υπηρεσίες"
+msgid "European Commission website"
+msgstr "Ιστότοπος της Ευρωπαϊκής Επιτροπής"
 
 msgid "Follow the European Commission"
 msgstr "Ακολουθήστε την Ευρωπαϊκή Επιτροπή"
