--- a/translations/oe_corporate_blocks-et.po
+++ b/translations/oe_corporate_blocks-et.po
@@ -2,17 +2,11 @@
 msgid "European Commission"
 msgstr "Euroopa Komisjon"
 
-msgid "https://ec.europa.eu/commission/index_en"
-msgstr "https://ec.europa.eu/commission/index_et"
-
-msgid "Commission and its priorities"
-msgstr "Komisjon ja tema prioriteedid"
-
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_et"
 
-msgid "Policies, information and services"
-msgstr "Poliitikavaldkonnad, teave ja teenused"
+msgid "European Commission website"
+msgstr "Euroopa Komisjoni veebisait"
 
 msgid "Follow the European Commission"
 msgstr "Jälgige Euroopa Komisjoni"
