--- a/translations/oe_corporate_blocks-hr.po
+++ b/translations/oe_corporate_blocks-hr.po
@@ -2,17 +2,11 @@
 msgid "European Commission"
 msgstr "Europska komisija"
 
-msgid "https://ec.europa.eu/commission/index_en"
-msgstr "https://ec.europa.eu/commission/index_hr"
-
-msgid "Commission and its priorities"
-msgstr "Prioriteti Komisije"
-
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_hr"
 
-msgid "Policies, information and services"
-msgstr "Politike, informacije i službe"
+msgid "European Commission website"
+msgstr "Internetske stranice Europske komisije"
 
 msgid "Follow the European Commission"
 msgstr "Pratite Europsku komisiju"
