--- a/translations/oe_corporate_blocks-it.po
+++ b/translations/oe_corporate_blocks-it.po
@@ -2,17 +2,11 @@
 msgid "European Commission"
 msgstr "Commissione europea"
 
-msgid "https://ec.europa.eu/commission/index_en"
-msgstr "https://ec.europa.eu/commission/index_it"
-
-msgid "Commission and its priorities"
-msgstr "Le priorità della Commissione"
-
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_it"
 
-msgid "Policies, information and services"
-msgstr "Politiche, informazioni e servizi"
+msgid "European Commission website"
+msgstr "Sito web della Commissione europea"
 
 msgid "Follow the European Commission"
 msgstr "Segui la Commissione europea"
