OPENEUROPA-2394: Minor corrections.

--- a/translations/oe_corporate_blocks-bg.po
+++ b/translations/oe_corporate_blocks-bg.po
@@ -2,11 +2,20 @@
 msgid "European Commission"
 msgstr "Европейска комисия"
 
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_bg"
+
+msgid "Commission and its priorities"
+msgstr "Комисията и нейните приоритети"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_bg"
 
 msgid "European Commission website"
 msgstr "Уебсайт на Европейската комисия"
+
+msgid "Policies, information and services"
+msgstr "Политики, информация и услуги"
 
 msgid "Follow the European Commission"
 msgstr "Следвайте Европейската комисия"
