--- a/translations/oe_corporate_blocks-fi.po
+++ b/translations/oe_corporate_blocks-fi.po
@@ -2,11 +2,20 @@
 msgid "European Commission"
 msgstr "Euroopan komissio"
 
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_fi"
+
+msgid "Commission and its priorities"
+msgstr "Komissio ja sen toiminnan painopisteet"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_fi"
 
 msgid "European Commission website"
 msgstr "Euroopan komission verkkosivusto"
+
+msgid "Policies, information and services"
+msgstr "Politiikan alat, palvelut, tietolähteet"
 
 msgid "Follow the European Commission"
 msgstr "Seuraa Euroopan komissiota"
