--- a/translations/oe_corporate_blocks-lv.po
+++ b/translations/oe_corporate_blocks-lv.po
@@ -2,11 +2,20 @@
 msgid "European Commission"
 msgstr "Eiropas Komisija"
 
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_lv"
+
+msgid "Commission and its priorities"
+msgstr "Komisija un tās prioritātes"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_lv"
 
 msgid "European Commission website"
 msgstr "Eiropas Komisijas tīmekļa vietne"
+
+msgid "Policies, information and services"
+msgstr "Politikas jomas, informācija un dienesti"
 
 msgid "Follow the European Commission"
 msgstr "Sekojiet Eiropas Komisijai"
