--- a/translations/oe_corporate_blocks-cs.po
+++ b/translations/oe_corporate_blocks-cs.po
@@ -2,11 +2,20 @@
 msgid "European Commission"
 msgstr "Evropská komise"
 
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_cs"
+
+msgid "Commission and its priorities"
+msgstr "Komise a její priority"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_cs"
 
 msgid "European Commission website"
 msgstr "Internetové stránky Evropské komise"
+
+msgid "Policies, information and services"
+msgstr "Oblasti politiky, informace a služby"
 
 msgid "Follow the European Commission"
 msgstr "Sledujte Evropskou komisi"
