--- a/translations/oe_corporate_blocks-pl.po
+++ b/translations/oe_corporate_blocks-pl.po
@@ -2,11 +2,20 @@
 msgid "European Commission"
 msgstr "Komisja Europejska"
 
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_pl"
+
+msgid "Commission and its priorities"
+msgstr "Komisja i jej priorytety"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_pl"
 
 msgid "European Commission website"
 msgstr "Strona internetowa Komisji Europejskiej"
+
+msgid "Policies, information and services"
+msgstr "Obszary polityki, informacje i usługi"
 
 msgid "Follow the European Commission"
 msgstr "Komisja Europejska w mediach społecznościowych"
