--- a/translations/oe_corporate_blocks-sl.po
+++ b/translations/oe_corporate_blocks-sl.po
@@ -2,11 +2,20 @@
 msgid "European Commission"
 msgstr "Evropska komisija"
 
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_sl"
+
+msgid "Commission and its priorities"
+msgstr "Komisija in njene prednostne naloge"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_sl"
 
 msgid "European Commission website"
 msgstr "Spletišče Evropske komisije"
+
+msgid "Policies, information and services"
+msgstr "Politike, informacije in službe"
 
 msgid "Follow the European Commission"
 msgstr "Spremljajte Evropsko komisijo"
