--- a/translations/oe_corporate_blocks-sv.po
+++ b/translations/oe_corporate_blocks-sv.po
@@ -2,11 +2,20 @@
 msgid "European Commission"
 msgstr "Europeiska kommissionen"
 
+msgid "https://ec.europa.eu/commission/index_en"
+msgstr "https://ec.europa.eu/commission/index_sv"
+
+msgid "Commission and its priorities"
+msgstr "Kommissionen och dess prioriteringar"
+
 msgid "https://ec.europa.eu/info/index_en"
 msgstr "https://ec.europa.eu/info/index_sv"
 
 msgid "European Commission website"
 msgstr "Europeiska kommissionens webbplats"
+
+msgid "Policies, information and services"
+msgstr "Politikområden, information och tjänster"
 
 msgid "Follow the European Commission"
 msgstr "Följ kommissionen"
